wrapper/svdpi_wrapper.nim

else:
  static :
    hint("Declaration of " & "svPutBitArrElem2Vec32" &
        " already exists, not redeclaring")
when not declared(svPutBitArrElem3Vec32):
  proc svPutBitArrElem3Vec32*(d: svOpenArrayHandle_1090519512;
                              s: ptr svBitVec32_1090519514; indx1: cint;
                              indx2: cint; indx3: cint): void {.cdecl,
      importc: "svPutBitArrElem3Vec32".}
else:
  static :
    hint("Declaration of " & "svPutBitArrElem3Vec32" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElemVec32):
  proc svPutLogicArrElemVec32*(d: svOpenArrayHandle_1090519512;
                               s: ptr svLogicVec32_1090519518; indx1: cint): void {.
      cdecl, varargs, importc: "svPutLogicArrElemVec32".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElemVec32" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem1Vec32):
  proc svPutLogicArrElem1Vec32*(d: svOpenArrayHandle_1090519512;
                                s: ptr svLogicVec32_1090519518; indx1: cint): void {.
      cdecl, importc: "svPutLogicArrElem1Vec32".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem1Vec32" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem2Vec32):
  proc svPutLogicArrElem2Vec32*(d: svOpenArrayHandle_1090519512;
                                s: ptr svLogicVec32_1090519518; indx1: cint;
                                indx2: cint): void {.cdecl,
      importc: "svPutLogicArrElem2Vec32".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem2Vec32" &
        " already exists, not redeclaring")
when not declared(svPutLogicArrElem3Vec32):
  proc svPutLogicArrElem3Vec32*(d: svOpenArrayHandle_1090519512;
                                s: ptr svLogicVec32_1090519518; indx1: cint;
                                indx2: cint; indx3: cint): void {.cdecl,
      importc: "svPutLogicArrElem3Vec32".}
else:
  static :
    hint("Declaration of " & "svPutLogicArrElem3Vec32" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElemVec32):
  proc svGetBitArrElemVec32*(d: ptr svBitVec32_1090519514; s: svOpenArrayHandle_1090519512;
                             indx1: cint): void {.cdecl, varargs,
      importc: "svGetBitArrElemVec32".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElemVec32" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem1Vec32):
  proc svGetBitArrElem1Vec32*(d: ptr svBitVec32_1090519514;
                              s: svOpenArrayHandle_1090519512; indx1: cint): void {.
      cdecl, importc: "svGetBitArrElem1Vec32".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem1Vec32" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem2Vec32):
  proc svGetBitArrElem2Vec32*(d: ptr svBitVec32_1090519514;
                              s: svOpenArrayHandle_1090519512; indx1: cint;
                              indx2: cint): void {.cdecl,
      importc: "svGetBitArrElem2Vec32".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem2Vec32" &
        " already exists, not redeclaring")
when not declared(svGetBitArrElem3Vec32):
  proc svGetBitArrElem3Vec32*(d: ptr svBitVec32_1090519514;
                              s: svOpenArrayHandle_1090519512; indx1: cint;
                              indx2: cint; indx3: cint): void {.cdecl,
      importc: "svGetBitArrElem3Vec32".}
else:
  static :
    hint("Declaration of " & "svGetBitArrElem3Vec32" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElemVec32):
  proc svGetLogicArrElemVec32*(d: ptr svLogicVec32_1090519518;
                               s: svOpenArrayHandle_1090519512; indx1: cint): void {.
      cdecl, varargs, importc: "svGetLogicArrElemVec32".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElemVec32" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem1Vec32):
  proc svGetLogicArrElem1Vec32*(d: ptr svLogicVec32_1090519518;
                                s: svOpenArrayHandle_1090519512; indx1: cint): void {.
      cdecl, importc: "svGetLogicArrElem1Vec32".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem1Vec32" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem2Vec32):
  proc svGetLogicArrElem2Vec32*(d: ptr svLogicVec32_1090519518;
                                s: svOpenArrayHandle_1090519512; indx1: cint;
                                indx2: cint): void {.cdecl,
      importc: "svGetLogicArrElem2Vec32".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem2Vec32" &
        " already exists, not redeclaring")
when not declared(svGetLogicArrElem3Vec32):
  proc svGetLogicArrElem3Vec32*(d: ptr svLogicVec32_1090519518;
                                s: svOpenArrayHandle_1090519512; indx1: cint;
                                indx2: cint; indx3: cint): void {.cdecl,
      importc: "svGetLogicArrElem3Vec32".}
else:
  static :
    hint("Declaration of " & "svGetLogicArrElem3Vec32" &
        " already exists, not redeclaring")